chore implemented generators and completed